# ComputerGrahpicsStudy

./: README.md
homework/hw1_raytracing/: CMakeLists.txt  raytracing.sln  raytracing.vcxproj  raytracing.vcxproj.filters
homework/hw1_raytracing/src/: gobject.h  mainray.cpp  material.h  point.h  ray.cpp  ray.h  scene.cpp  scene.h  simplecamera.cpp  simplecamera.h  sphere.cpp  sphere.h  vector.cpp  vector.h
